Corosel fix on mobile 2

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12924,3 +12924,9 @@ textarea.form-control {
     stroke-dashoffset: -136px;
   }
 }
+
+.owl-carousel .owl-stage,
+.owl-carousel.owl-drag .owl-item {
+  -ms-touch-action: auto;
+  touch-action: auto;
+}
